Fix the wrapping product title on screen width 1280px

--- a/frontend/src/Components/CartItems/CartItems.css
+++ b/frontend/src/Components/CartItems/CartItems.css
@@ -199,15 +199,18 @@
 }
 
 @media (max-width:1280px) {
-    .cartitems {
-        margin: 60px 50px;
-    }
-
-    .cartitems-format {
-        grid-template-columns: 0.5fr 1.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
+    .cartitems-format-main {
+        grid-template-columns: 0.5fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr;
         gap: 20px;
         padding: 15px 0px;
         font-size: 15px;
+    }
+
+    .cartitems-format .title-column {
+        max-width: 150px; /* Adjust the width according to your needs */
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .carticon-product-icon {
@@ -241,7 +244,6 @@
 
     .cartitems-promocode {
         width: auto;
-        /* max-width: 500px; */
     }
 
     .cartsitems-promobox {
